--- a/cibil-score-service/application.yml
+++ b/cibil-score-service/application.yml
@@ -4,9 +4,12 @@ spring:
     url: jdbc:oracle:thin:@10.90.1.105:1521/DEV
     
   jpa:
-    hibernate:
-      ddl-auto: update
-    show-sql: true
+    properties:
+       hibernate:
+         format_sql: true
+       hibernate:
+         ddl-auto: update
+       show-sql: true
  
 eureka:
   client:
