--- a/cibil-score-service/application.yml
+++ b/cibil-score-service/application.yml
@@ -8,6 +8,10 @@ spring:
     hibernate:
       ddl-auto: update
     show-sql: true
+    properties:
+       hibernate:
+        format_sql: true
+
  
 eureka:
   client:
